# sorts-rs

./: Cargo.toml  README.md
benches/: sorts_bench.rs
src/: lib.rs  main.rs  sort.rs  test.rs
