[package]
name = "sorts_rs"
version = "0.1.0"
authors = ["Logarithmus <logarithmus.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "sorts_bench"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
rand = "0.7"